# DIP_course

./: .gitignore  README.md
code/: README.md
code/crystallization_filter/: CMakeLists.txt
code/crystallization_filter/src/: main.cpp
code/face_beauty_filter/src/: main.cpp
code/image_filter/: README.md
code/image_filter/src/: main.cpp
